--- a/bcp-dr.html
+++ b/bcp-dr.html
@@ -42,6 +42,7 @@
 								<ul>
 									<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
 									<a href="cyber-security-solutions.html">Cyber Security</a>
+									<a href="networking-solutions.html">Networking Solutions</a>
 									<a href="unified-workplace.html">Unified Workplace</a>
 								</ul>
 							</li>
@@ -59,7 +60,7 @@
 							<div class="col-8 col-12-medium">
 								<article class="box post">
 									<header>
-										<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Introduction</b></h3>
+										<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Introduction</b></h3>
 									</header>
 									<section>
 										<p>
@@ -73,7 +74,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Deliverables:</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Deliverables:</b></h3>
 										</header>
 										<p>
 											Following are the deliverables of this service:
