--- a/contact.html
+++ b/contact.html
@@ -118,9 +118,12 @@
 								<li>
 									<a href="#">Solutions</a>
 									<ul>
-										<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
-										<a href="cyber-security-solutions.html">Cyber Security</a>
-										<a href="unified-workplace.html">Unified Workplace</a>
+										<ul>
+											<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
+											<a href="cyber-security-solutions.html">Cyber Security</a>
+											<a href="networking-solutions.html">Networking Solutions</a>
+											<a href="unified-workplace.html">Unified Workplace</a>
+										</ul>
 									</ul>
 								</li>
 								<li><a href="products.html">Partners</a></li>
