--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 										<a href="cloud-consulting.html">Cloud Consulting</a>
 										<a href="it-transformation.html">IT Transformation</a>
 										<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
+										<a href="cyber-security-services.html">Cyber Security</a>
 										<a href="network-collab.html">Network and Collaboration</a>
 										<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
 										<a href="end-user-computing.html">End User Computing</a>
@@ -61,6 +62,7 @@
 									<ul>
 										<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
 										<a href="cyber-security-solutions.html">Cyber Security</a>
+										<a href="networking-solutions.html">Networking Solutions</a>
 										<a href="unified-workplace.html">Unified Workplace</a>
 									</ul>
 								</li>
