--- a/it-transformation.html
+++ b/it-transformation.html
@@ -42,6 +42,7 @@
 								<ul>
 									<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
 									<a href="cyber-security-solutions.html">Cyber Security</a>
+									<a href="networking-solutions.html">Networking Solutions</a>
 									<a href="unified-workplace.html">Unified Workplace</a>
 								</ul>
 							</li>
@@ -104,12 +105,12 @@
 										</header>
 										<p>
 											Sprawling servers, operating and storage systems, and desktop applications create a costly and complex IT environment.
-											To keep this computer equipment expansion manageable, Data Centre consolidation has become an increasingly popular choice for IT professionals.
+											To keep this computer equipment expansion manageable, Data Center consolidation has become an increasingly popular choice for IT professionals.
 										</p>
 										<p>
-											Data Centre consolidation can help your company get the most from its resources by reducing costs, elevating
-											service levels and improving IT manageability. Data Centre consolidation brings the benefits of the Hybrid and
-											Public Cloud service to Data Centre. With the right approach, your business can achieve its returns on investment (ROI) objectives in a
+											Data Center consolidation can help your company get the most from its resources by reducing costs, elevating
+											service levels and improving IT manageability. Data Center consolidation brings the benefits of the Hybrid and
+											Public Cloud service to Data Center. With the right approach, your business can achieve its returns on investment (ROI) objectives in a
 											very short period of time.
 										</p>
 										<header>
@@ -130,7 +131,7 @@
 											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Data Center Relocation</b></h3>
 										</header>
 										<p>
-											As part of this service we will seamlessly relocate your Data Centre to a new facility through a well-defined
+											As part of this service we will seamlessly relocate your Data Center to a new facility through a well-defined
 											process. The following approach options are evaluated based on the customer requirement.
 										</p>
 										<ul>
