--- a/network-collab.html
+++ b/network-collab.html
@@ -42,6 +42,7 @@
 								<ul>
 									<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
 									<a href="cyber-security-solutions.html">Cyber Security</a>
+									<a href="networking-solutions.html">Networking Solutions</a>
 									<a href="unified-workplace.html">Unified Workplace</a>
 								</ul>
 							</li>
@@ -60,49 +61,52 @@
 								<article class="box post">
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Network Services</b></h3>
-											<br>
-											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Network Assessment</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Network Assessment </b></h3>
 										</header>
 										<p>
-											Network Assessment services is a comprehensive review of your network infrastructure. As part of this service Yashasvi
-											consultants will work with you to determine fault tolerance, Availability, throughput and routing architecture.
+											Network Assessment services is a comprehensive review of your network infrastructure. As part of this service Yashasvi consultants
+											will work with you to determine fault tolerance, availability, throughput and routing architecture.
 											A full analysis will carried out and recommendations provided.
 										</p>
+										<p>
+											The following aspects are looked at as part of this service which includes the analysis of current network architecture encompassing the following business touch-points:
+										</p>
 										<ul>
-											<li>Analysis of current network architecture encompassing all business touch-points</li>
+											<li>Wired and Wireless</li>
+											<li>WAN/Hybrid WAN</li>
+											<li>Unified Collaboration</li>
+											<li>Software-Defined Network</li>
+										</ul>
+										<p>
+											Our team will work on delivering the following as part of the service:
+										</p>
+										<ul>
 											<li>Network traffic and pattern analysis</li>
 											<li>Network availability and fault tolerance</li>
-											<li>Network configuration information</li>
+											<li>Network configuration standardization</li>
 											<li>Optimization and automation of networking</li>
-											<li>Cloud Ready Network Analysis</li>
+											<li>Cloud Ready Network analysis</li>
 											<li>Network management framework</li>
+											<li>Network function virtualization</li>
 										</ul>
 									</section>
 									<section>
-									</section>
-									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Network Architect and Deployment Services</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Network Architect and Deployment Services</b></h3>
 										</header>
 										<p>
-											This service provides a complete blueprint of Network, Voice and Video infrastructure to organization that
-											are building a new network or redesigning an existing Data and Voice infrastructure. Our Consulting Services
-											professionals have extensive experience working with large-scale networks. They work directly with your organization's
-											management and operations staffs to understand your network objectives in order to recommend industry best practices and the
-											solutions and technologies that apply to your network environment.
+											This service provides a complete blueprint of Network, Voice and Video infrastructure to organization that are building a new network or redesigning an
+											existing Data and Voice infrastructure. Our Consulting Services professionals have extensive experience working with large-scale networks.
+											They work directly with your organization's management and operations staffs to understand your network objectives in order to recommend industry
+											best practices and the solutions and technologies that apply to your network environment.
 										</p>
-										<p>
-											The following aspects are looked at as part of this service:
-										</p>
-										<header>
-											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Deliverables</b></h3>
-										</header>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Deliverables</b></h3>
+										<br>
 										<ul>
 											<li>Detailed project plan</li>
 											<li>Network topology and traffic pattern</li>
 											<li>High level architecture and detailed design</li>
-											<li>Design encompasses the Wired and Wireless, WAN, Data Centre Networking</li>
+											<li>Design encompasses the Wired and Wireless, WAN, Data Center Networking</li>
 											<li>High level architecture and design for software-defined networking</li>
 											<li>Unified Communication and Collaboration Readiness assessment</li>
 											<li>BOM details with right balance of sourcing options</li>
@@ -111,66 +115,22 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Network Modernization</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Network Modernization</b></h3>
 										</header>
 										<p>
-											This Network Modernization Service provides a transformation roadmap to the needs of the today’s digital
-											business through standardization, enhanced wired and wireless infrastructure, software-defined networking (SDN) and
-											SD-WAN. Our consulting services professionals have experience working with enterprises will help you improve mobility
-											and collaboration and improved customer relationships.
+											This Network Modernization Service provides a transformation roadmap to the needs of the today’s digital business through standardization, enhanced wired and wireless infrastructure,
+											software-defined networking (SDN) and SD-WAN. Our consulting services professionals have experience working with enterprises will help you
+											improve mobility and collaboration and improved customer relationships.
 										</p>
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Network Optimization</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Network Optimization</b></h3>
 										</header>
 										<p>
-											This Network Optimization Service provides to understand the network flow and traffic. The Network traffic is growing
-											radically. User demand for immediate network access is increasing hence the requirement for quality services. Hence our
-											network optimization services will provide the deep understanding and analysis and identification of bottlenecks.
-										</p>
-									</section>
-									<hr>
-									<section>
-										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Security Services</b></h3>
-											<br>
-											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Architecture and Design Services</b></h3>
-										</header>
-										<p>
-											This service provides a complete blueprint of Information security infrastructure to organization that are building a new or redesigning
-											the existing security framework. Our consulting services professionals have extensive experience working with large-scale enterprises.
-											They work directly with your organization’s management and operations staffs to understand your security objectives in order to recommend industry
-											best practices, solutions and technologies that apply to your IT environment. Security Architecture Assessment encompasses the multiple business
-											touch-points:
-										</p>
-										<ul>
-											<li>Infrastructure Security</li>
-											<li>Secure Cloud Security</li>
-											<li>Secure Mobile</li>
-											<li>Data Leakage Prevention</li>
-											<li>Authentication and Access Management</li>
-										</ul>
-									</section>
-									<section>
-										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Information Security Assessment</b></h3>
-										</header>
-										<p>
-											As part of Information security Assessment will give you complete understanding of, and visibility into, the security of
-											Information Technology Infrastructure. Yashasvi will encompass the following multiple business touch
-										</p>
-										<ul>
-											<li>Detailed Network Architecture review</li>
-											<li>Penetration Testing</li>
-											<li>Vulnerability Assessment</li>
-											<li>Authentication and Authorization infrastructure review</li>
-											<li>Security policy and Procedure review</li>
-											<li>Sever and Network devices hardening</li>
-											<li>Analyse the cloud security and management</li>
-										</ul>
-										<p>
-											We use tools and process to audit your existing IT environment and ensure your organization is complainant with various security standards.
+											This Network Optimization Service provides to understand the network flow and traffic. The Network traffic is growing radically.
+											User demand for immediate network access is increasing hence the requirement for quality services.
+											Hence our network optimization services will provide the deep understanding and analysis and identification of bottlenecks.
 										</p>
 									</section>
 								</article>
