--- a/unified-workplace.html
+++ b/unified-workplace.html
@@ -42,6 +42,7 @@
 								<ul>
 									<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
 									<a href="cyber-security-solutions.html">Cyber Security</a>
+									<a href="networking-solutions.html">Networking Solutions</a>
 									<a href="unified-workplace.html">Unified Workplace</a>
 								</ul>
 							</li>
@@ -58,9 +59,7 @@
 						<div class="row">
 							<div class="col-8 col-12-medium">
 								<article class="box post">
-									<header>
-										<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b> &nbsp; Converged Workplace Solutions</b></h3>
-									</header>
+									<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b> &nbsp; Converged Workplace Solutions</b></h3>
 									<section>
 										<header>
 											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Unified Workplace</b></h3>
@@ -106,7 +105,7 @@
 											This Workplace Security Solution offering can help to protect the workplace by safeguarding the assets and employees
 											against the evolving threats. The continuous safeguarding requires the regular evaluation of tools, technologies, policies
 											and people at right time with right skills. The workplace security encompasses all layers of infrastructure not limiting to
-											end users devices, Network (wire and Wireless), Mobility, and Data Centre.
+											end users devices, Network (wire and Wireless), Mobility, and Data Center.
 										</p>
 									</section>
 									<section>
