--- a/cyber-security-solutions.html
+++ b/cyber-security-solutions.html
@@ -42,6 +42,7 @@
 								<ul>
 									<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
 									<a href="cyber-security-solutions.html">Cyber Security</a>
+									<a href="networking-solutions.html">Networking Solutions</a>
 									<a href="unified-workplace.html">Unified Workplace</a>
 								</ul>
 							</li>
