--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
 		<div id="page-wrapper">
 				<section id="header" class="main-header">
 					<div class="index-des">
-						<img id="logo" src="images/contact-us.jpg" alt="yashasvi logo" width="300" height="300" />
+						<img id="logo" src="images/main-logo.jpg" alt="yashasvi logo" width="360" height="230" />
 						<!-- <img src="images/brush-stroke3.png" alt="brush stroke" width="100%" height="300" /> -->
 					</div>
 
