--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<!-- <img src="images/brush-stroke3.png" alt="brush stroke" width="100%" height="300" /> -->
 					</div>
 					<div class="header-content">
-						<h1 style="font-size: 50px;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
+						<h1 style="font-size: 60px;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
 						<h3><b><i>Let's simplify..</i></b></h3>
 					</div>
 
@@ -140,7 +140,7 @@
 							<div class="col-12">
 									<section>
 										<header class="major">
-											<h2><b style="color: black;">Our Portfolio</b></h2>
+											<h2><b style="color: white;">Our Portfolio</b></h2>
 										</header>
 
 										<div class="row">
