--- a/products.html
+++ b/products.html
@@ -31,7 +31,7 @@
 					<div class="index-des">
 						<img id="logo" src="images/main-logo.jpg" alt="yashasvi logo" width="360" height="230" />
 					</div>
-						<h1 style="font-size: 50px;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
+						<h1 style="font-size: 60px;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
 						<h3><b><i>Let's simplify..</i></b></h3>
 
 						<nav id="nav">
@@ -71,7 +71,7 @@
 							<div class="col-12">
 									<section>
 										<header class="major">
-											<h2><b>Products we sell</b></h2>
+											<h2><b style="color: white;">Products we sell</b></h2>
 											<p><i><b>Follow the links on each of the cards below to find out more.</b></i></p>
 										</header>
 										<div class="row">
