--- a/cyber-security-solutions.html
+++ b/cyber-security-solutions.html
@@ -32,6 +32,7 @@
 									<a href="cloud-consulting.html">Cloud Consulting</a>
 									<a href="it-transformation.html">IT Transformation</a>
 									<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
+									<a href="cyber-security-services.html">Cyber Security</a>
 									<a href="network-collab.html">Network and Collaboration</a>
 									<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
 									<a href="end-user-computing.html">End User Computing</a>
@@ -60,7 +61,7 @@
 							<div class="col-8 col-12-medium">
 								<article class="box post">
 									<header>
-										<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Security Architecture and Design</b></h3>
+										<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Data Security Architecture and Design</b></h3>
 									</header>
 									<p>
 										Yashasvi understands the high costs and challenges of safeguarding today’s complex and rapidly changing IT environment.
@@ -77,9 +78,9 @@
 									</p>
 									<section>
 										<header>
-											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Enterprise Infrastructure Security</b></h3>
+											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Enterprise Infrastructure Security</b></h3>
 											<br>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Infrastructure Security</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Infrastructure Security</b></h3>
 										</header>
 										<p>
 											Yashasvi understands the challenges to defend the perimeter is an enormous task that includes many considerations, from firewalls to end points, networking, and web and email gateways.
@@ -96,7 +97,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Secure Mobility</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Secure Mobility</b></h3>
 										</header>
 										<p>
 											Yashasvi understands the essence of Mobility for organization to remain relevant in the internet age.
@@ -107,7 +108,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Secure Cloud</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Secure Cloud</b></h3>
 										</header>
 										<p>
 											Yashasvi understands the shift to the cloud must be done right the first time. A wrong can cause loss of business and brand.
@@ -117,7 +118,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Identity and Access Management</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Identity and Access Management</b></h3>
 										</header>
 										<p>
 											Yashasvi provides the solutions for enterprise and cloud to maintain control of user access rights.
