--- a/data-center-cloud-solutions.html
+++ b/data-center-cloud-solutions.html
@@ -32,6 +32,7 @@
 									<a href="cloud-consulting.html">Cloud Consulting</a>
 									<a href="it-transformation.html">IT Transformation</a>
 									<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
+									<a href="cyber-security-services.html">Cyber Security</a>
 									<a href="network-collab.html">Network and Collaboration</a>
 									<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
 									<a href="end-user-computing.html">End User Computing</a>
@@ -60,7 +61,7 @@
 							<div class="col-8 col-12-medium">
 								<article class="box post">
 									<header>
-										<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Public, Private and Hybrid Cloud</b></h3>
+										<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Public, Private and Hybrid Cloud</b></h3>
 									</header>
 									<p>
 										Cloud computing comes in three forms:
@@ -73,14 +74,14 @@
 									<p>
 									<ol>
 										<li>A public cloud is the Internet. Readily make resources, such as SaaS applications and storage, available to the public.</li>
-										<li>Private clouds are proprietary data centre architectures that provide the same amount of flexibility and scalability as a traditional data centre.</li>
+										<li>Private clouds are proprietary data center architectures that provide the same amount of flexibility and scalability as a traditional data center.</li>
 										<li>Using a Hybrid approach, allows companies to maintain control over an internally managed private cloud while relying on the public cloud as per requirement.
 											Design a custom cloud strategy as per your requirements.</li>
 									</ol>
 									</p>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Centre Management and Security</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Data Center Management and Security</b></h3>
 										</header>
 										<p>
 											Data is an organisation’s most important and critical assets and its effective management and usage is a key factor ensuring
@@ -89,27 +90,27 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Centre Automation</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Data Center Automation</b></h3>
 										</header>
 										<p>
-											Data Centre automation helps to provide a framework to achieve the business results you need, effectively.
+											Data Center automation helps to provide a framework to achieve the business results you need, effectively.
 											We automate IT processes across computing, network, storage layers in physical and virtual environments.
 											We help automate processes and have people using open source and commercial tools to achieve the results.
 										</p>
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Centre Optimization</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Data Center Optimization</b></h3>
 										</header>
 										<p>
-											Optimization refers to changing a data centre to improve its overall functionality and performance.
-											Data Centres are at the heart of every business’ IT infrastructure, and we help you transform your data centre
+											Optimization refers to changing a data center to improve its overall functionality and performance.
+											Data Centres are at the heart of every business’ IT infrastructure, and we help you transform your data center
 											to achieve the same kind of elasticity as cloud computing and other similar designs.
 										</p>
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; BCP and DR</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; BCP and DR</b></h3>
 										</header>
 										<p>
 											Business Continuity (BC) management is a service that provides a framework to ensure the resilience of your business
@@ -120,17 +121,17 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Virtualization and Converged Infrastructure</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Virtualization and Converged Infrastructure</b></h3>
 										</header>
 										<p>
-											Data centre virtualization is the process of designing, developing and deploying a data centre on virtualization and
+											Data center virtualization is the process of designing, developing and deploying a data center on virtualization and
 											cloud computing technologies. We help you all the way, from the beginning of your journey, with server virtualization and metamorphose
-											into a fully virtualized software-defined data centre.
+											into a fully virtualized software-defined data center.
 										</p>
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Storage and Backup</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Storage and Backup</b></h3>
 										</header>
 										<p>
 											As part of this service Yashasvi will provide a comprehensive architecture and design of Compute, Storage and Backup environment.
