--- a/promotions.html
+++ b/promotions.html
@@ -46,6 +46,7 @@
 										<a href="cloud-consulting.html">Cloud Consulting</a>
 										<a href="it-transformation.html">IT Transformation</a>
 										<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
+										<a href="cyber-security-services.html">Cyber Security</a>
 										<a href="network-collab.html">Network and Collaboration</a>
 										<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
 										<a href="end-user-computing.html">End User Computing</a>
