--- a/unified-workplace.html
+++ b/unified-workplace.html
@@ -32,6 +32,7 @@
 									<a href="cloud-consulting.html">Cloud Consulting</a>
 									<a href="it-transformation.html">IT Transformation</a>
 									<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
+									<a href="cyber-security-services.html">Cyber Security</a>
 									<a href="network-collab.html">Network and Collaboration</a>
 									<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
 									<a href="end-user-computing.html">End User Computing</a>
@@ -59,10 +60,10 @@
 						<div class="row">
 							<div class="col-8 col-12-medium">
 								<article class="box post">
-									<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b> &nbsp; Converged Workplace Solutions</b></h3>
+									<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Converged Workplace Solutions</b></h3>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Unified Workplace</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Unified Workplace</b></h3>
 										</header>
 										<p>
 											This Solution offering can help streamline majority of intricacy involved in managing to end-user needs
@@ -87,7 +88,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Mobility</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Mobility</b></h3>
 										</header>
 										<p>
 											This Enterprise Mobility solutions offering can help streamline majority of complexities involved to gain the
@@ -99,7 +100,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Workplace Security</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Workplace Security</b></h3>
 										</header>
 										<p>
 											This Workplace Security Solution offering can help to protect the workplace by safeguarding the assets and employees
@@ -110,7 +111,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Unified Communication and Collaboration</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Unified Communication and Collaboration</b></h3>
 										</header>
 										<p>
 											Yashasvi can offer the solutions to unify the communications into single solution for the enterprises.
@@ -131,9 +132,14 @@
 							</header>
 							<br>
 							<ul>
-								<li><a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a></li>
-								<li><a href="cyber-security-solutions.html">Cyber Security</a></li>
-								<li><a href="unified-workplace.html">Unified workplace</a></li>
+								<li><a href="data-center-consulting.html">Data Center Consulting</a></li>
+								<li><a href="cloud-consulting.html">Cloud Consulting</a></li>
+								<li><a href="it-transformation.html">IT Transformation</a></li>
+								<li><a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a></li>
+								<li><a href="cyber-security-services.html">Cyber Security</a></li>
+								<li><a href="network-collab.html">Network and Collaboration</a></li>
+								<li><a href="compute-storage-backup.html">Compute, Storage and Backup</a></li>
+								<li><a href="end-user-computing.html">End User Computing</a></li>
 							</ul>
 						</section>
 					</div>
