--- a/end-user-computing.html
+++ b/end-user-computing.html
@@ -32,6 +32,7 @@
 								<a href="cloud-consulting.html">Cloud Consulting</a>
 								<a href="it-transformation.html">IT Transformation</a>
 								<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
+								<a href="cyber-security-services.html">Cyber Security</a>
 								<a href="network-collab.html">Network and Collaboration</a>
 								<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
 								<a href="end-user-computing.html">End User Computing</a>
@@ -93,6 +94,7 @@
 										<li><a href="cloud-consulting.html">Cloud Consulting</a></li>
 										<li><a href="it-transformation.html">IT Transformation</a></li>
 										<li><a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a></li>
+										<li><a href="cyber-security-services.html">Cyber Security</a></li>
 										<li><a href="network-collab.html">Network and Collaboration</a></li>
 										<li><a href="compute-storage-backup.html">Compute, Storage and Backup</a></li>
 										<li><a href="end-user-computing.html">End User Computing</a></li>
