--- a/index.html
+++ b/index.html
@@ -37,9 +37,15 @@
 						<!-- <img src="images/brush-stroke3.png" alt="brush stroke" width="100%" height="300" /> -->
 					</div>
 					<div class="header-content">
-						<h1 style="font-size: 60px;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
+						<h1 style="font-size: 50px;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
 						<h3><b><i>Let's simplify..</i></b></h3>
 					</div>
+
+					<div class="sidebar">
+						Area 1 (for example a sidebar)
+						<gcse:searchbox></gcse:searchbox>
+					</div>
+
 
 						<nav id="nav">
 							<ul>
@@ -470,12 +476,25 @@
 				</section>
 		</div>
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<!-- <script src="assets/js/breakpoints.min.js"></script> -->
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.dropotron.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<!-- <script src="assets/js/breakpoints.min.js"></script> -->
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
+		<script>
+		(function() {
+		  var cx = '007861040586064025089:eld2jhymali';
+		  var gcse = document.createElement('script');
+		  gcse.type = 'text/javascript';
+		  gcse.async = true;
+		  gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+		  var s = document.getElementsByTagName('script')[0];
+		  s.parentNode.insertBefore(gcse, s);
+		})();
+		</script>
+
+		<gcse:searchresults-only></gcse:searchresults-only>
 	</body>
 </html>
